# vaccine-feed-ingest

./: .dockerignore  .editorconfig  .gitignore  .isort.cfg  .mypy.ini  Dockerfile  LICENSE  README.md  jsonschema.py  pyproject.toml  requirements.txt  setup.sh  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: runner-fetch.md  runner-normalize.md  runner-parse.md
.github/workflows/: lint.yml
ingestors/: __init__.py  jsonschema.py  vaccinespotter.py
runners/CA/: vaccinespotter.py
runners/CA/vaccinespotter/: fetch.py  normalize.py  parse.py  run.py
tests/: conftest.py
tests/stages/: test_caching.py  test_enrichment.py
tests/utils/: test_location_id_from_name.py  test_match.py  test_misc.py  test_normalize.py  test_normalize_address.py  test_normalize_phone.py  test_provider_id_from_name.py  test_stages_ingest.py  test_utils_validation.py
vaccine-feed-ingest/: run.py
vaccine-feed-ingest/normalizers/: jsonschema.py
vaccine-feed-ingest/runners/_template/: README.md  parse.sh
vaccine-feed-ingest/runners/ca/sf_gov/: README.md  fetch.sh  normalize.py  parse.py
vaccine-feed-ingest/runners/us/vaccinespotter_org/: fetch.sh  normalize.sh  parse.sh
vaccine_feed_ingest/: cli.py  run.py  vial.py
vaccine_feed_ingest/apis/: common.py  geocodio.py  placekey.py
vaccine_feed_ingest/ingestors/: arcgis.py  arcgis_ingest.py
vaccine_feed_ingest/runners/_shared/: fetch.py  normalize.py  parse.py
vaccine_feed_ingest/runners/_template/: README.md  fetch.sh  normalize.sh  parse.sh
vaccine_feed_ingest/runners/ak/arcgis/: fetch.yml  normalize.py  parse.yml
vaccine_feed_ingest/runners/ak/clinic_list/: fetch.yml  normalize.py  parse.yml
vaccine_feed_ingest/runners/ak/state_realtime/: fetch.sh
vaccine_feed_ingest/runners/al/arcgis/: fetch.py  fetch.yml  normalize.py  parse.yml
vaccine_feed_ingest/runners/al/cahaba/: fetch.sh
vaccine_feed_ingest/runners/al/jefferson/: fetch.py  normalize.py  parse.py
vaccine_feed_ingest/runners/ar/health_ar/: fetch.sh
vaccine_feed_ingest/runners/ar/state_health_units/: fetch.py  fetch.sh
vaccine_feed_ingest/runners/az/arcgis/: fetch.yml  normalize.py  parse.yml
vaccine_feed_ingest/runners/az/maricopa_arcgis/: fetch.yml
vaccine_feed_ingest/runners/az/pinal_ph_clinics_gov/: fetch.py  normalize.py  parse.py
vaccine_feed_ingest/runners/az/pinal_ph_vaccinelocations_gov/: fetch_disabled.sh  normalize.py  parse.py
vaccine_feed_ingest/runners/ca/los_angeles_gov/: fetch.sh  normalize.py  parse.py
vaccine_feed_ingest/runners/ca/metrolink/: fetch.py  normalize.py  parse.py
vaccine_feed_ingest/runners/ca/sd_arcgis/: fetch.yml  parse.yml
vaccine_feed_ingest/runners/ca/sf_gov/: README.md  fetch.sh  normalize.py  parse.py
vaccine_feed_ingest/runners/ca/smc_health/: fetch.sh
vaccine_feed_ingest/runners/co/colorado_gov/: fetch.py  normalize.py  parse.py
vaccine_feed_ingest/runners/ct/: fetch.sh  normalize.py  parse.py
vaccine_feed_ingest/runners/ct/covidvaccinefinder_gov/: normalize.py
vaccine_feed_ingest/runners/ct/state/: fetch.py  normalize.py  parse.py
vaccine_feed_ingest/runners/dc/district/: fetch.sh  normalize.py  parse.py
vaccine_feed_ingest/runners/fl/state/: fetch.sh  normalize.py  parse.py
vaccine_feed_ingest/runners/ga/dph/: fetch.py  fetch.sh  normalize.py  parse.py
vaccine_feed_ingest/runners/ia/state/: fetch.py  normalize.py  parse.py
vaccine_feed_ingest/runners/il/ilvaccine_org/: fetch_inactive.sh  normalize.py  normalize_inactive.py  parse.sh  parse_inactive.sh
vaccine_feed_ingest/runners/il/juvare/: README.md  fetch.sh  normalize.py  parse.yml
vaccine_feed_ingest/runners/il/sfsites/: README.md  fetch.py  fetch_disabled.py  normalize.py  parse.yml
vaccine_feed_ingest/runners/ma/: fetch.sh  normalize.py  parse.py
vaccine_feed_ingest/runners/nv/: fetch.py
vaccine_feed_ingest/schema/: facility.py  schema.py
vaccine_feed_ingest/stages/: caching.py  common.py  enrichment.py  ingest.py  load.py  outputs.py  site.py  validation.py
vaccine_feed_ingest/utils/: log.py  match.py  misc.py  normalize.py  parse.py  validation.py
(+149 files in other folders)
