[tool.poetry]
name = "vaccine-feed-ingest"
version = "0.1.0"
description = "Pipeline for ingesting nationwide feed of vaccine facilities"
authors = ["Bryan Culbertson <bryan.culbertson@gmail.com>"]

[tool.poetry.dependencies]
flake8 = { version = "^3.9.0", optional = true }
black = { version = "^20.8b1", optional = true }
mypy = { version = "^0.812", optional = true }

python = "^3.9"
click = "^7.1.2"
python-dotenv = "^0.17.0"
pathy = {extras = ["gcs"], version = "^0.4.0"}
isort = "^5.8.0"
arcgis = "^1.8.5"
PyYAML = "^5.4.1"
pydantic = "^1.8.1"
Rtree = "^0.9.7"
Shapely = "^1.7.1"
geojson = "^2.5.0"
us = "^2.0.2"
jellyfish = "0.6.1"
pandas = "^1.2.4"
openpyxl = "^3.0.7"
pytz = "^2021.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
lint = ["flake8", "black", "mypy"]

[tool.poetry.scripts]
vaccine-feed-ingest = "vaccine_feed_ingest.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38']
